- Handle error if unicode value is entered in the cart quantity field
- Add a persistent cart capability for previously logged in users
- Django 1.2 compatibility change in save signatures
- Remove some dupe code in the login functions
- Turn off autocomplete on cc#'s and ccvs in the checkout form 
- Move the import of trml2pdf so that startup is quicker
- Fix a bug in the category slug url
- Change the way currency formats are determined. Explicit option will remove locale bugs.
- Fix the import for simplejson to support certain OS supplied json libs
- Update search to work on product variation skus
- Update login form so it accepts 75 characters
- Add a trap for CACHE_TIMEOUT
- Removed CATEGORY and PRODUCT slug configuration from livesettings
- Fixed imports in Canadapost shipping module
- Changed the way payment modules are imported. Making way for django-bursar integration
- Multiple fixes to paypal modules
- Allow admins to choose whether tax is calculated based on the shipping or billing address
- Refactor the templates and the way jquery is loaded. Will make it easier to switch jquery versions and hosting locations.
- Updated jquery to 1.4.2
- Added new documentation on Satchmo's views - :doc:`views`
- Cache the category tree for big performance improvements
- Refactor the email sending routine so it is more modular
- Add two new category tags
- Added search field in the admin to more easily find products
- Added new javascript to populate state fields when the country is changed
- Refactor some of the templates to make more consistent
- Change the behavior of applying discounts that don't evenly split among multiple products
- Update the autocomplete admin js to the latest version. Also widened field and added missing image
- Updated polish translation
- Multiple documentation improvements on the shipping pages
- Added initial `South <http://south.aeracode.org/>`_ migrations for the Product model 