@@ -1,8 +1,10 @@
 from django.conf import settings
-from django.template import loader, Context
+from django.template import loader, Context, TemplateDoesNotExist
 from satchmo_store.shop.models import Config
 from socket import error as SocketError
 import logging
+from livesettings import config_value
+import os.path
 
 log = logging.getLogger('satchmo_store.mail')
 
@@ -10,6 +12,8 @@ if "mailer" in settings.INSTALLED_APPS:
     from mailer import send_mail
 else:
     from django.core.mail import send_mail
+    
+from django.core.mail import EmailMultiAlternatives
 
 class NoRecipientsException(StandardError):
     pass
@@ -29,11 +33,14 @@ def send_store_mail(subject, context, template, recipients_list=None,
 
     :parameter: template: The path of the template to use when rendering the
       message body.
+      
+    If store config is set to enable HTML emails, will attempt to find the HTML
+    template and send it.
     """
     shop_config = Config.objects.get_current()
     shop_email = shop_config.store_email
     shop_name = shop_config.store_name
-
+    send_html = config_value('SHOP', 'HTML_EMAIL')
     if not shop_email:
         log.warn('No email address configured for the shop.  Using admin settings.')
         shop_email = settings.ADMINS[0][1]
@@ -48,6 +55,19 @@ def send_store_mail(subject, context, template, recipients_list=None,
 
     t = loader.get_template(template)
     body = t.render(c)
+    
+    if send_html:
+        base_dir,base_name = os.path.split(template) 
+        file_name, ext = os.path.splitext(base_name)
+        template_name = file_name + '.html'
+        if settings.DEBUG:
+            log.info("Attempting to send html mail.")
+        try:
+            html_t = loader.get_template(os.path.join(base_dir, template_name))
+            html_body = html_t.render(c)
+        except TemplateDoesNotExist:
+            log.warn('Unable to find html email template %s. Falling back to text only email.', os.path.join(base_dir, template_name))
+            send_html = False
 
     recipients = recipients_list or []
 
@@ -57,13 +77,26 @@ def send_store_mail(subject, context, template, recipients_list=None,
     if not recipients:
         raise NoRecipientsException
 
-    try:
-        send_mail(subject, body, shop_email, recipients,
-                  fail_silently=fail_silently)
-    except SocketError, e:
-        if settings.DEBUG:
-            log.error('Error sending mail: %s' % e)
-            log.warn('Ignoring email error, since you are running in DEBUG mode.  Email was:\nTo:%s\nSubject: %s\n---\n%s', ",".join(recipients), subject, body)
-        else:
-            log.fatal('Error sending mail: %s' % e)
-            raise IOError('Could not send email. Please make sure your email settings are correct and that you are not being blocked by your ISP.')
+    if send_html:
+        msg = EmailMultiAlternatives(subject, body, shop_email, recipients)
+        msg.attach_alternative(html_body, "text/html")
+        try:
+            msg.send(fail_silently=fail_silently)
+        except SocketError, e:
+            if settings.DEBUG:
+                log.error('Error sending mail: %s' % e)
+                log.warn('Ignoring email error, since you are running in DEBUG mode.  Email was:\nTo:%s\nSubject: %s\n---\n%s', ",".join(recipients), subject, body)
+            else:
+                log.fatal('Error sending mail: %s' % e)
+                raise IOError('Could not send email. Please make sure your email settings are correct and that you are not being blocked by your ISP.')
+    else:
+        try:
+            send_mail(subject, body, shop_email, recipients,
+                      fail_silently=fail_silently)
+        except SocketError, e:
+            if settings.DEBUG:
+                log.error('Error sending mail: %s' % e)
+                log.warn('Ignoring email error, since you are running in DEBUG mode.  Email was:\nTo:%s\nSubject: %s\n---\n%s', ",".join(recipients), subject, body)
+            else:
+                log.fatal('Error sending mail: %s' % e)
+                raise IOError('Could not send email. Please make sure your email settings are correct and that you are not being blocked by your ISP.')
