@@ -1,0 +1,9 @@
+{% load i18n satchmo_currency satchmo_discounts %}
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><title></title></head>
+<body style="font-family:'Helvetica Neue', Helvetica, Arial;font-size:90%;">
+<h2>Admin Notification for {{ shop_name}}</h2>
+<p> A new order has been submitted. Details are included below: </p>
+{% include "shop/email/_order_detail_table.html" %}
+</body>
+</html>
